--- a/product.html
+++ b/product.html
@@ -5,167 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Produktdetaljer | BrandRadar</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      background: #fafafa;
-      font-family: "Inter", Arial, sans-serif;
-      color: #111;
-      margin: 0;
-    }
-    header.main-header {
-      background: #101011;
-      color: #fff;
-      padding: 14px 28px;
-      font-weight: 800;
-      font-size: 20px;
-      letter-spacing: 0.5px;
-    }
-    main {
-      max-width: 1200px;
-      margin: 60px auto;
-      padding: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      align-items: flex-start;
-    }
-    .product-gallery {
-      flex: 1 1 55%;
-      background: #fff;
-      border: 1px solid #eaeaea;
-      border-radius: 14px;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-      position: relative;
-    }
-    .product-gallery img#product-image {
-      width: 100%;
-      height: 500px;
-      object-fit: contain;
-      border-radius: 10px;
-      background: #f6f6f6;
-    }
-    .badge {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      background: #000;
-      color: #fff;
-      padding: 6px 14px;
-      border-radius: 12px;
-      font-size: 14px;
-      font-weight: 600;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-    .badge.new { background: #00b894; }
-    .favorite-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      width: 38px;
-      height: 38px;
-      padding: 0;
-      transition: transform 0.25s ease;
-    }
-    .favorite-btn svg {
-      width: 100%;
-      height: 100%;
-      fill: none;
-      stroke: #aaa;
-      stroke-width: 2;
-      transition: fill 0.25s ease, stroke 0.25s ease;
-    }
-    .favorite-btn:hover svg { stroke: #e63946; }
-    .favorite-btn.active svg {
-      fill: #e63946;
-      stroke: #e63946;
-      transform: scale(1.05);
-    }
-    .thumbnail-container {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 20px;
-      flex-wrap: wrap;
-    }
-    .thumbnail-container img {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      border-radius: 8px;
-      border: 2px solid transparent;
-      cursor: pointer;
-      transition: transform 0.2s ease, border-color 0.2s ease;
-    }
-    .thumbnail-container img:hover {
-      transform: scale(1.05);
-      border-color: #000;
-    }
-    .product-details {
-      flex: 1 1 40%;
-      background: #fff;
-      border: 1px solid #eaeaea;
-      border-radius: 14px;
-      padding: 36px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-    .product-details h1 {
-      font-size: 32px;
-      font-weight: 800;
-      margin: 0 0 10px;
-      line-height: 1.2;
-    }
-    .product-meta { color: #666; font-size: 14px; margin-bottom: 18px; line-height: 1.5; }
-    .product-price { font-size: 24px; font-weight: 700; margin-bottom: 20px; }
-    .buy-button {
-      display: inline-block;
-      margin-top: 10px;
-      background: #000;
-      color: #fff;
-      padding: 14px 32px;
-      border-radius: 8px;
-      font-weight: 600;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .buy-button:hover { background: #333; }
-    .product-description { margin-top: 20px; font-size: 15px; color: #333; line-height: 1.6; }
-    .rating { margin-top: 15px; font-size: 14px; color: #f1c40f; }
-    .back-link { display: inline-block; margin-top: 30px; color: #000; text-decoration: underline; font-size: 14px; }
-    @media (max-width: 768px) {
-      main { flex-direction: column; padding: 20px 16px; }
-      .product-gallery img#product-image { height: 320px; }
-      .product-details { padding: 24px; }
-      .product-details h1 { font-size: 26px; }
-      .product-price { font-size: 22px; }
-      .thumbnail-container img { width: 60px; height: 60px; }
-    }
-    .fav-popup {
-      position: fixed;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #000;
-      color: #fff;
-      padding: 12px 22px;
-      border-radius: 8px;
-      font-size: 15px;
-      font-weight: 600;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.4s ease;
-      z-index: 9999;
-    }
-    .fav-popup.show { opacity: 1; }
-  </style>
 </head>
 <body>
-
 <header class="main-header">
   <a class="logo" href="index.html">BrandRadar</a>
   <nav class="top-nav">
@@ -176,15 +17,16 @@
   </nav>
 </header>
 
-<main>
+<main class="product-main">
   <div class="product-gallery">
     <span id="product-badge" class="badge"></span>
-    <button id="favorite-btn" class="favorite-btn" title="Legg til i favoritter">
+    <button id="favorite-btn" class="favorite-btn">
       <svg viewBox="0 0 24 24"><path d="M12 21s-7-4.35-10-8.87C-1.33 8.24 1.42 3 6.6 3 9.07 3 12 5.09 12 5.09S14.93 3 17.4 3c5.18 0 7.93 5.24 4.6 9.13C19 16.65 12 21 12 21z"/></svg>
     </button>
     <img id="product-image" src="" alt="Produktbilde">
-    <div class="thumbnail-container" id="thumbnail-container"></div>
+    <div id="thumbnail-container" class="thumbnail-container"></div>
   </div>
+
   <div class="product-details">
     <h1 id="product-title"></h1>
     <div id="product-brand" class="product-meta"></div>
@@ -200,65 +42,49 @@
 <div id="fav-popup" class="fav-popup"></div>
 
 <script>
-  const key = "favorites";
-  function popup(msg){
-    const p=document.getElementById("fav-popup");
-    p.textContent=msg;p.classList.add("show");
-    setTimeout(()=>p.classList.remove("show"),1500);
-  }
-  function updateFavCount(){
-    const c=JSON.parse(localStorage.getItem(key)||"[]").length;
-    document.querySelectorAll("[data-fav-count]").forEach(el=>el.textContent=c);
-  }
-  const d=localStorage.getItem("selectedProduct");
-  if(d){
-    const p=JSON.parse(d);
-    product_image.src=p.image;
-    product_title.textContent=p.title;
-    product_brand.textContent="Brand: "+(p.brand||"");
-    product_category.textContent=`${p.gender||""} • ${p.subcategory||""}`;
-    product_price.textContent="Pris: "+(p.price||"");
-    buy_button.href=p.link||"#";
-    if(p.description)product_description.textContent=p.description;
-    if(p.rating)product_rating.textContent="⭐ "+p.rating;
-    const b=document.getElementById("product-badge");
-    if(p.discount){
-      const t=String(p.discount).replace(/["%]/g,"").trim();
-      const n=/nyhet|new/i.test(t);
-      b.textContent=n?"Nyhet!":"Discount: "+t+"%";
-      if(n)b.classList.add("new");
-    }else b.style.display="none";
-    const f=document.getElementById("favorite-btn");
-    let favs=JSON.parse(localStorage.getItem(key)||"[]");
-    if(favs.some(x=>x.title===p.title))f.classList.add("active");
-    f.addEventListener("click",()=>{
-      let list=JSON.parse(localStorage.getItem(key)||"[]");
-      const ex=list.some(x=>x.title===p.title);
-      if(ex){
-        list=list.filter(x=>x.title!==p.title);
-        f.classList.remove("active");
-        popup("Fjernet fra favoritter ❌");
-      }else{
-        list.push(p);
-        f.classList.add("active");
-        popup("Lagt til i favoritter ❤️");
-      }
-      localStorage.setItem(key,JSON.stringify(list));
-      updateFavCount();
-    });
-    const thumbs=document.getElementById("thumbnail-container");
-    [p.image,p.image2,p.image3,p.image4].filter(Boolean).forEach((img,i)=>{
-      const t=document.createElement("img");
-      t.src=img;if(i===0)t.style.borderColor="#000";
-      t.addEventListener("click",()=>{
-        document.getElementById("product-image").src=img;
-        document.querySelectorAll(".thumbnail-container img").forEach(x=>x.style.borderColor="transparent");
-        t.style.borderColor="#000";
-      });
-      thumbs.appendChild(t);
-    });
-  }
-  updateFavCount();
+const key = "favorites";
+function showPopup(msg){const p=document.getElementById("fav-popup");p.textContent=msg;p.classList.add("show");setTimeout(()=>p.classList.remove("show"),1500);}
+function updateFavCount(){const c=JSON.parse(localStorage.getItem(key)||"[]").length;document.querySelectorAll("[data-fav-count]").forEach(el=>el.textContent=c);}
+const d=localStorage.getItem("selectedProduct");
+if(d){
+  const p=JSON.parse(d);
+  const mainImg=document.getElementById("product-image");
+  mainImg.src=p.image;
+  document.getElementById("product-title").textContent=p.title;
+  document.getElementById("product-brand").textContent="Brand: "+(p.brand||"");
+  document.getElementById("product-category").textContent=`${p.gender||""} • ${p.subcategory||""}`;
+  document.getElementById("product-price").textContent="Pris: "+(p.price||"");
+  document.getElementById("buy-button").href=p.link||"#";
+  if(p.description)document.getElementById("product-description").textContent=p.description;
+  if(p.rating)document.getElementById("product-rating").textContent="⭐ "+p.rating;
+
+  const b=document.getElementById("product-badge");
+  let disc=p.discount||"";
+  if(!isNaN(disc)&&disc!==""){const n=parseFloat(disc);if(n>0&&n<1)disc=Math.round(n*100)+"%";}
+  if(disc){const t=String(disc).replace(/["%]/g,"").trim();const n=/nyhet|new/i.test(t);b.textContent=n?"Nyhet!":"Discount: "+t+"%";if(n)b.classList.add("new");}else b.style.display="none";
+
+  const fav=document.getElementById("favorite-btn");
+  let favs=JSON.parse(localStorage.getItem(key)||"[]");
+  if(favs.some(x=>x.title===p.title))fav.classList.add("active");
+
+  fav.addEventListener("click",()=>{
+    let list=JSON.parse(localStorage.getItem(key)||"[]");
+    const ex=list.some(x=>x.title===p.title);
+    if(ex){list=list.filter(x=>x.title!==p.title);fav.classList.remove("active");showPopup("Fjernet fra favoritter ❌");}
+    else{list.push(p);fav.classList.add("active");showPopup("Lagt til i favoritter ❤️");}
+    localStorage.setItem(key,JSON.stringify(list));updateFavCount();
+  });
+
+  const thumbs=document.getElementById("thumbnail-container");
+  [p.image,p.image2,p.image3,p.image4].filter(Boolean).forEach((img,i)=>{
+    const t=document.createElement("img");
+    t.src=img;if(i===0)t.style.borderColor="#000";
+    t.addEventListener("click",()=>{mainImg.src=img;document.querySelectorAll(".thumbnail-container img").forEach(x=>x.style.borderColor="transparent");t.style.borderColor="#000";});
+    thumbs.appendChild(t);
+  });
+}
+updateFavCount();
 </script>
 </body>
 </html>
+
