--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BrandRadar – Home</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <!-- HEADER -->
   <header class="main-header">
     <a class="logo" href="index.html">BrandRadar</a>
@@ -18,29 +17,50 @@
       <a href="favoritter.html">Favoritter (<span data-fav-count>0</span>)</a>
     </nav>
     <form class="search-container" role="search">
-      <input type="search" id="searchInput" placeholder="Søk produkter…" aria-label="Søk">
+      <input type="search" id="searchInput" placeholder="Søk produkter…" aria-label="Søk" />
     </form>
   </header>
 
   <!-- SHOP NAV -->
   <nav class="shop-nav desktop-only">
     <ul>
-      <li class="dropdown"><a href="#">Clothing</a></li>
+      <li class="dropdown"><a href="#">Clothing</a>
+        <div class="mega-menu">
+          <ul>
+            <li><span>Women</span></li>
+            <li><a href="#">T-shirts & Tops</a></li>
+            <li><a href="#">Dresses</a></li>
+            <li><a href="#">Jeans</a></li>
+            <li><a href="#">Pants</a></li>
+            <li><a href="#">Jackets & Blazers</a></li>
+            <li><a href="#">Gymwear</a></li>
+          </ul>
+          <ul>
+            <li><span>Men</span></li>
+            <li><a href="#">T-shirts & Polo</a></li>
+            <li><a href="#">Sweats & Hoodies</a></li>
+            <li><a href="#">Pants & Shorts</a></li>
+            <li><a href="#">Jeans</a></li>
+            <li><a href="#">Jackets</a></li>
+          </ul>
+        </div>
+      </li>
       <li class="dropdown"><a href="#">Shoes</a></li>
       <li class="dropdown"><a href="#">Supplements</a></li>
     </ul>
   </nav>
 
-  <main>
-    <div class="container">
-      <h2>Utvalgte produkter</h2>
-      <div id="products-container" class="grid"></div>
-    </div>
+  <!-- MAIN -->
+  <main class="container">
+    <h2>Utvalgte produkter</h2>
+    <div id="products-container" class="grid"></div>
   </main>
 
   <footer class="site-footer">© BrandRadar</footer>
   <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
