--- a/index.html
+++ b/index.html
@@ -23,107 +23,109 @@
   </header>
 
   <!-- SHOP NAV + MEGA MENU -->
-  <nav class="shop-nav">
-    <ul>
-      <!-- CLOTHING -->
-      <li class="dropdown">
-        <a href="#">Clothing</a>
-        <div class="mega-menu">
-          <ul>
-            <span>Women</span>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">T-shirts & Tops</a></li>
-            <li><a href="#">Dresses</a></li>
-            <li><a href="#">Jeans</a></li>
-            <li><a href="#">Pants</a></li>
-            <li><a href="#">Jackets & Blazers</a></li>
-            <li><a href="#">Gymwear</a></li>
-          </ul>
+<nav class="shop-nav">
+  <ul>
+    <!-- CLOTHING -->
+    <li class="dropdown">
+      <a href="#">Clothing</a>
+      <div class="mega-menu">
+        <ul>
+          <span>Women</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">T-shirts & Tops</a></li>
+          <li><a href="#">Dresses</a></li>
+          <li><a href="#">Jeans</a></li>
+          <li><a href="#">Pants</a></li>
+          <li><a href="#">Jackets & Blazers</a></li>
+          <li><a href="#">Gymwear</a></li>
+        </ul>
 
-          <ul>
-            <span>Men</span>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">T-shirts & Polo</a></li>
-            <li><a href="#">Sweats & Hoodies</a></li>
-            <li><a href="#">Jeans</a></li>
-            <li><a href="#">Pants & Shorts</a></li>
-            <li><a href="#">Jackets</a></li>
-          </ul>
+        <ul>
+          <span>Men</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">T-shirts & Polo</a></li>
+          <li><a href="#">Sweats & Hoodies</a></li>
+          <li><a href="#">Jeans</a></li>
+          <li><a href="#">Pants & Shorts</a></li>
+          <li><a href="#">Jackets</a></li>
+        </ul>
 
-          <ul>
-            <span>Brands</span>
-            <li><a href="#">Nike</a></li>
-            <li><a href="#">Adidas</a></li>
-            <li><a href="#">Gymshark</a></li>
-            <li><a href="#">Under Armour</a></li>
-            <li><a href="#">H&M</a></li>
-          </ul>
-        </div>
-      </li>
+        <ul>
+          <span>Children</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">T-shirts</a></li>
+          <li><a href="#">Dresses</a></li>
+          <li><a href="#">Pants</a></li>
+          <li><a href="#">Sweaters</a></li>
+          <li><a href="#">Jackets</a></li>
+        </ul>
+      </div>
+    </li>
 
-      <!-- SHOES -->
-      <li class="dropdown">
-        <a href="#">Shoes</a>
-        <div class="mega-menu">
-          <ul>
-            <span>Women</span>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Sneakers</a></li>
-            <li><a href="#">Sandals</a></li>
-            <li><a href="#">Boots</a></li>
-          </ul>
+    <!-- SHOES -->
+    <li class="dropdown">
+      <a href="#">Shoes</a>
+      <div class="mega-menu">
+        <ul>
+          <span>Women</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">Sneakers</a></li>
+          <li><a href="#">Boots</a></li>
+          <li><a href="#">Heels</a></li>
+          <li><a href="#">Sandals</a></li>
+        </ul>
 
-          <ul>
-            <span>Men</span>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Sneakers</a></li>
-            <li><a href="#">Formal Shoes</a></li>
-            <li><a href="#">Running Shoes</a></li>
-          </ul>
+        <ul>
+          <span>Men</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">Sneakers</a></li>
+          <li><a href="#">Running</a></li>
+          <li><a href="#">Boots</a></li>
+          <li><a href="#">Dress shoes</a></li>
+        </ul>
 
-          <ul>
-            <span>Brands</span>
-            <li><a href="#">Nike</a></li>
-            <li><a href="#">Adidas</a></li>
-            <li><a href="#">Puma</a></li>
-            <li><a href="#">New Balance</a></li>
-            <li><a href="#">Asics</a></li>
-          </ul>
-        </div>
-      </li>
+        <ul>
+          <span>Children</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">Sneakers</a></li>
+          <li><a href="#">Sandals</a></li>
+          <li><a href="#">Winter shoes</a></li>
+        </ul>
+      </div>
+    </li>
 
-      <!-- SUPPLEMENTS -->
-      <li class="dropdown">
-        <a href="#">Supplements</a>
-        <div class="mega-menu">
-          <ul>
-            <span>Categories</span>
-            <li><a href="#">Explore all products</a></li>
-            <li><a href="#">Proteiner</a></li>
-            <li><a href="#">Proteinbarer</a></li>
-            <li><a href="#">Kreatin</a></li>
-            <li><a href="#">Vitaminer & Mineraler</a></li>
-          </ul>
+    <!-- SUPPLEMENTS -->
+    <li class="dropdown">
+      <a href="#">Supplements</a>
+      <div class="mega-menu">
+        <ul>
+          <span>Categories</span>
+          <li><a href="#">Explore all products</a></li>
+          <li><a href="#">Proteiner</a></li>
+          <li><a href="#">Proteinbarer</a></li>
+          <li><a href="#">Kreatin</a></li>
+          <li><a href="#">Vitaminer & Mineraler</a></li>
+        </ul>
 
-          <ul>
-            <span>Brands</span>
-            <li><a href="#">MyProtein</a></li>
-            <li><a href="#">Optimum Nutrition</a></li>
-            <li><a href="#">Gymshark Nutrition</a></li>
-            <li><a href="#">Star Nutrition</a></li>
-            <li><a href="#">Proteinfabrikken</a></li>
-          </ul>
+        <ul>
+          <span>Brands</span>
+          <li><a href="#">MyProtein</a></li>
+          <li><a href="#">Optimum Nutrition</a></li>
+          <li><a href="#">Gymshark Nutrition</a></li>
+          <li><a href="#">Star Nutrition</a></li>
+          <li><a href="#">Proteinfabrikken</a></li>
+        </ul>
 
-          <ul>
-            <span>Goals</span>
-            <li><a href="#">Build Muscle</a></li>
-            <li><a href="#">Weight Loss</a></li>
-            <li><a href="#">Recovery</a></li>
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </nav>
+        <ul>
+          <span>Goals</span>
+          <li><a href="#">Build Muscle</a></li>
+          <li><a href="#">Weight Loss</a></li>
+          <li><a href="#">Recovery</a></li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</nav>
 
   <!-- PRODUKTER -->
   <main class="container">
@@ -136,6 +138,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
