--- a/index.html
+++ b/index.html
@@ -1,3 +1,159 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BrandRadar.shop</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <!-- HEADER -->
+  <header class="main-header">
+    <div class="logo">BrandRadar</div>
+    <div class="search-container">
+      <input type="text" placeholder="Søk etter produkter eller merker..." />
+      <button>🔍</button>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html" class="active">Home</a>
+      <a href="news.html">News</a>
+      <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter</a>
+    </nav>
+  </header>
+
+  <!-- SECONDARY NAV WITH MEGA MENU -->
+  <div class="category-bar">
+    <div class="category-item" data-category="clothing">Clothing</div>
+    <div class="category-item" data-category="shoes">Shoes</div>
+    <div class="category-item" data-category="supplements">Supplements</div>
+  </div>
+
+  <!-- MEGA MENU CONTENT -->
+  <div class="mega-menu">
+    <!-- CLOTHING -->
+    <div class="mega-content" id="clothing">
+      <div class="gender-section">
+        <h4>Men</h4>
+        <ul>
+          <li>Sweaters & Hoodies</li>
+          <li>T-shirts</li>
+          <li>Pants</li>
+          <li>Jeans</li>
+          <li>Jackets</li>
+          <li>Gymwear</li>
+        </ul>
+      </div>
+      <div class="gender-section">
+        <h4>Women</h4>
+        <ul>
+          <li>Sweaters & Hoodies</li>
+          <li>T-shirts</li>
+          <li>Jackets</li>
+          <li>Dresses</li>
+          <li>Cardigans</li>
+          <li>Gymwear</li>
+        </ul>
+      </div>
+      <div class="gender-section">
+        <h4>Children</h4>
+        <ul>
+          <li>T-shirts</li>
+          <li>Pants</li>
+          <li>Jackets</li>
+          <li>Sneakers</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- SHOES -->
+    <div class="mega-content" id="shoes">
+      <div class="gender-section">
+        <h4>Men</h4>
+        <ul>
+          <li>Sneakers</li>
+          <li>Boots</li>
+          <li>Sports</li>
+        </ul>
+      </div>
+      <div class="gender-section">
+        <h4>Women</h4>
+        <ul>
+          <li>Sneakers</li>
+          <li>Boots</li>
+          <li>Sports</li>
+          <li>Heels</li>
+        </ul>
+      </div>
+      <div class="gender-section">
+        <h4>Children</h4>
+        <ul>
+          <li>Sneakers</li>
+          <li>Boots</li>
+          <li>Sandals</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- SUPPLEMENTS -->
+    <div class="mega-content" id="supplements">
+      <div class="gender-section">
+        <h4>Equipment</h4>
+        <ul>
+          <li>Electronics</li>
+          <li>Sports</li>
+          <li>Bags</li>
+          <li>Home Workouts</li>
+          <li>Gym Gear</li>
+        </ul>
+      </div>
+      <div class="gender-section">
+        <h4>Supplements</h4>
+        <ul>
+          <li>Vitamins & Minerals</li>
+          <li>Proteinbars</li>
+          <li>Energybars</li>
+          <li>Proteinpowder</li>
+          <li>Creatine</li>
+          <li>PWO</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- FEATURED PRODUCTS SECTION -->
+  <section class="featured-products">
+    <h2>Utvalgte produkter</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <div class="discount-badge">20% OFF</div>
+        <img src="https://via.placeholder.com/250x250" alt="Nike Air Max" />
+        <h3>Nike Air Max 270</h3>
+        <p>Pris: 1 399,-</p>
+        <p class="gender-tag">Men</p>
+      </div>
+
+      <div class="product-card">
+        <div class="discount-badge">15% OFF</div>
+        <img src="https://via.placeholder.com/250x250" alt="Adidas Hoodie" />
+        <h3>Adidas Originals Hoodie</h3>
+        <p>Pris: 799,-</p>
+        <p class="gender-tag">Women</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/250x250" alt="Proteinbar" />
+        <h3>Star Nutrition Proteinbar</h3>
+        <p>Pris: 29,-</p>
+        <p class="gender-tag">Unisex</p>
+      </div>
+    </div>
+  </section>
+
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
+
 
 
 
