--- a/index.html
+++ b/index.html
@@ -29,97 +29,83 @@
     <div class="category-item" data-category="supplements">Supplements</div>
   </div>
 
-  <!-- MEGA MENU CONTENT -->
-  <div class="mega-menu">
-    <!-- CLOTHING -->
-    <div class="mega-content" id="clothing">
-      <div class="gender-section">
-        <h4>Men</h4>
-        <ul>
-          <li>Sweaters & Hoodies</li>
-          <li>T-shirts</li>
-          <li>Pants</li>
-          <li>Jeans</li>
-          <li>Jackets</li>
-          <li>Gymwear</li>
-        </ul>
-      </div>
-      <div class="gender-section">
-        <h4>Women</h4>
-        <ul>
-          <li>Sweaters & Hoodies</li>
-          <li>T-shirts</li>
-          <li>Jackets</li>
-          <li>Dresses</li>
-          <li>Cardigans</li>
-          <li>Gymwear</li>
-        </ul>
-      </div>
-      <div class="gender-section">
-        <h4>Children</h4>
-        <ul>
-          <li>T-shirts</li>
-          <li>Pants</li>
-          <li>Jackets</li>
-          <li>Sneakers</li>
-        </ul>
-      </div>
-    </div>
+ <!-- NAV-CATEGORIES + MEGA MENU -->
+<div class="nav-categories">
+  <ul class="nav-links">
+    <li class="nav-item" data-target="clothing">Clothing</li>
+    <li class="nav-item" data-target="shoes">Shoes</li>
+    <li class="nav-item" data-target="supplements">Supplements</li>
+  </ul>
+</div>
 
-    <!-- SHOES -->
-    <div class="mega-content" id="shoes">
-      <div class="gender-section">
-        <h4>Men</h4>
-        <ul>
-          <li>Sneakers</li>
-          <li>Boots</li>
-          <li>Sports</li>
-        </ul>
-      </div>
-      <div class="gender-section">
-        <h4>Women</h4>
-        <ul>
-          <li>Sneakers</li>
-          <li>Boots</li>
-          <li>Sports</li>
-          <li>Heels</li>
-        </ul>
-      </div>
-      <div class="gender-section">
-        <h4>Children</h4>
-        <ul>
-          <li>Sneakers</li>
-          <li>Boots</li>
-          <li>Sandals</li>
-        </ul>
-      </div>
+<div class="mega-menu" id="mega-menu">
+  <!-- CLOTHING -->
+  <div class="mega-content" id="clothing">
+    <div class="column">
+      <h4>Men</h4>
+      <a href="#">Sweaters & Hoodies</a>
+      <a href="#">T-shirts</a>
+      <a href="#">Pants</a>
+      <a href="#">Jeans</a>
+      <a href="#">Jackets</a>
+      <a href="#">Gymwear</a>
     </div>
-
-    <!-- SUPPLEMENTS -->
-    <div class="mega-content" id="supplements">
-      <div class="gender-section">
-        <h4>Equipment</h4>
-        <ul>
-          <li>Electronics</li>
-          <li>Sports</li>
-          <li>Bags</li>
-          <li>Home Workouts</li>
-          <li>Gym Gear</li>
-        </ul>
-      </div>
-      <div class="gender-section">
-        <h4>Supplements</h4>
-        <ul>
-          <li>Vitamins & Minerals</li>
-          <li>Proteinbars</li>
-          <li>Energybars</li>
-          <li>Proteinpowder</li>
-          <li>Creatine</li>
-          <li>PWO</li>
-        </ul>
-      </div>
+    <div class="column">
+      <h4>Women</h4>
+      <a href="#">Sweaters & Hoodies</a>
+      <a href="#">T-shirts</a>
+      <a href="#">Jackets</a>
+      <a href="#">Dresses</a>
+      <a href="#">Cardigans</a>
+      <a href="#">Gymwear</a>
+    </div>
+    <div class="column">
+      <h4>Children</h4>
+      <a href="#">T-shirts</a>
+      <a href="#">Pants</a>
+      <a href="#">Sneakers</a>
     </div>
   </div>
+
+  <!-- SHOES -->
+  <div class="mega-content" id="shoes">
+    <div class="column">
+      <h4>Men</h4>
+      <a href="#">Sneakers</a>
+      <a href="#">Boots</a>
+      <a href="#">Sports</a>
+    </div>
+    <div class="column">
+      <h4>Women</h4>
+      <a href="#">Sneakers</a>
+      <a href="#">Boots</a>
+      <a href="#">Heels</a>
+    </div>
+    <div class="column">
+      <h4>Children</h4>
+      <a href="#">Sneakers</a>
+      <a href="#">Sandals</a>
+    </div>
+  </div>
+
+  <!-- SUPPLEMENTS -->
+  <div class="mega-content" id="supplements">
+    <div class="column">
+      <h4>Equipment</h4>
+      <a href="#">Electronics</a>
+      <a href="#">Sports</a>
+      <a href="#">Bags</a>
+      <a href="#">Home Workouts</a>
+    </div>
+    <div class="column">
+      <h4>Supplements</h4>
+      <a href="#">Proteinpowder</a>
+      <a href="#">Creatine</a>
+      <a href="#">PWO</a>
+      <a href="#">Vitamins</a>
+    </div>
+  </div>
+</div>
 
   <!-- FEATURED PRODUCTS SECTION -->
   <section class="featured-products">
@@ -153,6 +139,7 @@
   <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
