--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrandRadar.shop</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
  <!-- HEADER -->
@@ -205,6 +205,7 @@
   <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
 
 
