--- a/index.html
+++ b/index.html
@@ -135,9 +135,10 @@
     </div>
   </section>
 
-  <script src="assets/js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
