--- a/index.html
+++ b/index.html
@@ -106,39 +106,20 @@
 </div>
 
 
-  <!-- FEATURED PRODUCTS SECTION -->
-  <section class="featured-products">
-    <h2>Utvalgte produkter</h2>
-    <div class="product-grid">
-      <div class="product-card">
-        <div class="discount-badge">20% OFF</div>
-        <img src="https://via.placeholder.com/250x250" alt="Nike Air Max" />
-        <h3>Nike Air Max 270</h3>
-        <p>Pris: 1 399,-</p>
-        <p class="gender-tag">Men</p>
-      </div>
+<!-- FEATURED PRODUCTS SECTION -->
+<section class="featured-products">
+  <h2>Utvalgte produkter</h2>
+  <div class="product-grid">
+    <!-- Produkter lastes automatisk fra Google Sheets -->
+  </div>
+</section>
 
-      <div class="product-card">
-        <div class="discount-badge">15% OFF</div>
-        <img src="https://via.placeholder.com/250x250" alt="Adidas Hoodie" />
-        <h3>Adidas Originals Hoodie</h3>
-        <p>Pris: 799,-</p>
-        <p class="gender-tag">Women</p>
-      </div>
-
-      <div class="product-card">
-        <img src="https://via.placeholder.com/250x250" alt="Proteinbar" />
-        <h3>Star Nutrition Proteinbar</h3>
-        <p>Pris: 29,-</p>
-        <p class="gender-tag">Unisex</p>
-      </div>
-    </div>
-  </section>
-
-  <script src="script.js"></script>
-  <script src="script-index.js"></script>
+<script src="script.js"></script>
+<script src="script-index.js"></script>
 </body>
 </html>
+
+
 
 
 
