--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   </div>
 </header>
 
-   <!-- CATEGORY BAR -->
+ <!-- NAV WRAP (ny container) -->
+<div class="nav-wrap">
+  
+  <!-- CATEGORY BAR -->
   <div class="nav-categories">
     <ul class="nav-links">
       <li class="nav-item" data-target="clothing">Clothing</li>
@@ -104,6 +107,7 @@
     </div>
   </div>
 </div>
+</div>
 
 
 <!-- FEATURED PRODUCTS SECTION -->
@@ -119,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
