--- a/product.html
+++ b/product.html
@@ -11,25 +11,27 @@
   <!-- HEADER -->
   <!-- (kopier nøyaktig header + nav-wrap fra index.html) -->
 
-  <section class="product-detail">
-    <div class="product-container">
-      <div class="image-gallery">
-        <img id="main-image" src="" alt="Produktbilde" />
-        <div class="thumbnails" id="thumbnails"></div>
-      </div>
-
-      <div class="info">
-        <h1 id="product-title"></h1>
-        <p id="product-brand" class="brand"></p>
-        <p id="product-price" class="price"></p>
-        <p id="product-discount" class="discount"></p>
-        <p id="product-desc" class="description"></p>
-
-        <button id="favorite-btn">❤️ Legg til favoritt</button>
-        <a id="buy-link" href="#" target="_blank" class="buy-btn">Kjøp produkt</a>
-      </div>
+ <section class="product-detail">
+  <div class="product-container">
+    <div class="image-gallery">
+      <img id="main-image" src="" alt="Produktbilde" />
+      <div class="thumbnails" id="thumbnails"></div>
     </div>
-  </section>
+
+    <div class="info">
+      <h1 id="product-title"></h1>
+      <p id="product-brand" class="brand"></p>
+      <p id="product-price" class="price"></p>
+      <p id="product-discount" class="discount"></p>
+      <p id="product-rating" class="rating"></p>
+      <p id="product-desc" class="description"></p>
+
+      <button id="favorite-btn">❤️ Legg til favoritt</button>
+      <a id="buy-link" href="#" target="_blank" class="buy-btn">Kjøp produkt</a>
+    </div>
+  </div>
+</section>
+
 
   <script src="script.js"></script>
   <script src="product.js"></script>
