--- a/product.html
+++ b/product.html
@@ -19,6 +19,7 @@
     </div>
 
     <div class="info">
+      <button id="back-btn">← Tilbake</button>
       <h1 id="product-title"></h1>
       <p id="product-brand" class="brand"></p>
       <p id="product-price" class="price"></p>
