--- a/product.html
+++ b/product.html
@@ -8,6 +8,26 @@
 </head>
 <body>
 
+  <!-- HEADER (uten mega-meny) -->
+<header class="main-header">
+  <div class="header-inner">
+    <div class="logo">BrandRadar</div>
+
+    <div class="search-box">
+      <input type="text" placeholder="Søk produkter eller merker..." />
+      <button>🔍</button>
+    </div>
+
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="news.html">News</a>
+      <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter</a>
+    </nav>
+  </div>
+</header>
+
+
   <!-- HEADER -->
   <!-- (kopier nøyaktig header + nav-wrap fra index.html) -->
 
