--- a/brands.html
+++ b/brands.html
@@ -43,7 +43,7 @@
     <div class="brand-grid" id="brand-grid"></div>
   </section>
 
-  <script src="assets/js/script-brands.js"></script>
+  <script src="script-brands.js"></script>
 </body>
 </html>
 
