--- a/favoritter.html
+++ b/favoritter.html
@@ -1,2 +1,42 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mine favoritter | BrandRadar</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- HEADER (gjenbrukes fra alle sider) -->
+  <header class="main-header">
+    <div class="header-inner">
+      <div class="logo">BrandRadar</div>
+
+      <div class="search-box">
+        <input type="text" placeholder="Søk produkter eller merker..." />
+        <button>🔍</button>
+      </div>
+
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="news.html">News</a>
+        <a href="brands.html">Brands</a>
+        <a href="favoritter.html" class="active">Favoritter</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- FAVORITTER -->
+  <section class="favorites-section">
+    <h2>Mine favoritter ❤️</h2>
+    <div class="favorites-grid" id="favorites-grid">
+      <p>Laster favoritter...</p>
+    </div>
+  </section>
+
+  <script src="assets/js/script-favorites.js"></script>
+  <script src="assets/js/script-favorites-page.js"></script>
+</body>
+</html>
 
 
