--- a/favoritter.html
+++ b/favoritter.html
@@ -34,8 +34,8 @@
     </div>
   </section>
 
-  <script src="assets/js/script-favorites.js"></script>
-  <script src="assets/js/script-favorites-page.js"></script>
+  <script src="script-favorites.js"></script>
+  <script src="script-favorites-page.js"></script>
 </body>
 </html>
 
