--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
 
 <script src="script-index.js"></script>
 <script src="script.js"></script>
+<script src="script-favorites.js"></script>
 
 </body>
 </html>
+
 
 
 
