--- a/favoritter.html
+++ b/favoritter.html
@@ -26,13 +26,12 @@
     </div>
   </header>
 
-  <!-- FAVORITTER -->
-  <section class="favorites-section">
-    <h2>Mine favoritter ❤️</h2>
-    <div class="favorites-grid" id="favorites-grid">
-      <p>Laster favoritter...</p>
-    </div>
-  </section>
+ <section class="favorites-section">
+  <h2>Dine favoritter ❤️</h2>
+  <div class="product-grid favorites-grid"></div>
+  <p id="no-favorites" style="display:none;">Ingen favoritter lagt til ennå ❤️</p>
+</section>
+
 
   <script src="script-favorites.js"></script>
   <script src="script-favorites-page.js"></script>
