--- a/favoritter.html
+++ b/favoritter.html
@@ -28,7 +28,7 @@
 
  <section class="favorites-section">
   <h2>Dine favoritter ❤️</h2>
-  <div class="product-grid favorites-grid"></div>
+ <div id="favorites-grid" class="product-grid favorites-grid"></div>
   <p id="no-favorites" style="display:none;">Ingen favoritter lagt til ennå ❤️</p>
 </section>
 
