--- a/favoritter.html
+++ b/favoritter.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- HEADER (gjenbrukes fra alle sider) -->
+  <!-- HEADER -->
   <header class="main-header">
     <div class="header-inner">
       <div class="logo">BrandRadar</div>
@@ -26,17 +26,16 @@
     </div>
   </header>
 
- <section class="favorites-section">
-  <h2>Dine favoritter ❤️</h2>
-<div id="favorites-grid" class="favorites-grid"></div>
-  <p id="no-favorites" style="display:none;">Ingen favoritter lagt til ennå ❤️</p>
-</section>
-
+  <!-- FAVORITTER -->
+  <section class="favorites-section">
+    <h2>Dine favoritter ❤️</h2>
+    <div id="favorites-grid" class="favorites-grid"></div>
+  </section>
 
   <script src="script-favorites.js"></script>
   <script src="script-favorites-page.js"></script>
-
 </body>
 </html>
+
 
 
