--- a/news.html
+++ b/news.html
@@ -1,1 +1,117 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BrandRadar News</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- HEADER -->
+  <header class="main-header">
+    <div class="header-inner">
+      <div class="logo">BrandRadar</div>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="news.html" class="active">News</a>
+        <a href="brands.html">Brands</a>
+        <a href="favoritter.html">Favoritter</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO: ukens kampanje -->
+  <section class="news-hero">
+    <img src="https://via.placeholder.com/1200x400" alt="Ukens trend" />
+    <div class="hero-content">
+      <h1>🔥 Høsttrender 2025</h1>
+      <p>Utforsk de mest populære stilene akkurat nå – håndplukket av BrandRadar.</p>
+      <a href="#" class="cta-btn">Se tilbud</a>
+    </div>
+  </section>
+
+  <!-- NYHETER / ARTIKLER -->
+  <section class="news-grid">
+    <h2>Siste nytt på radaren</h2>
+    <div class="grid">
+      <article class="news-card">
+        <img src="https://via.placeholder.com/400x250" alt="" />
+        <h3>3 sneakers som dominerer gatene i høst</h3>
+        <p>Klassikerne gjør comeback – se hvilke modeller som trender.</p>
+        <a href="#">Les mer</a>
+      </article>
+      <article class="news-card">
+        <img src="https://via.placeholder.com/400x250" alt="" />
+        <h3>Bærekraft møter mote</h3>
+        <p>Hvordan merker som Patagonia og Ganni setter standarden for 2025.</p>
+        <a href="#">Les mer</a>
+      </article>
+      <article class="news-card">
+        <img src="https://via.placeholder.com/400x250" alt="" />
+        <h3>Guide: Jakker til overgangssesongen</h3>
+        <p>5 anbefalinger før høsten setter inn – fra teknisk til trendy.</p>
+        <a href="#">Les mer</a>
+      </article>
+    </div>
+  </section>
+
+  <!-- UKENS DEALS -->
+  <section class="weekly-deals">
+    <h2>Ukens Deals 💸</h2>
+    <div class="deal-list">
+      <div class="deal-item">
+        <h4>20% på Nike hos Zalando</h4>
+        <a href="#">Se tilbud</a>
+      </div>
+      <div class="deal-item">
+        <h4>Fri frakt på Boozt – kun i helgen!</h4>
+        <a href="#">Shop nå</a>
+      </div>
+      <div class="deal-item">
+        <h4>Sportamore – opptil 60% rabatt på løpesko</h4>
+        <a href="#">Se mer</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- RADAR PICKS -->
+  <section class="radar-picks">
+    <h2>Radar Picks 🔥</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Produkt" />
+        <h3>Nike Air Max 270</h3>
+        <a href="#" class="buy-btn">Se produkt</a>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Produkt" />
+        <h3>Asics Gel-Kayano</h3>
+        <a href="#" class="buy-btn">Se produkt</a>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Produkt" />
+        <h3>Adidas Samba OG</h3>
+        <a href="#" class="buy-btn">Se produkt</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- BRAND SPOTLIGHT -->
+  <section class="brand-spotlight">
+    <h2>Ugens Brand 👕</h2>
+    <div class="brand-feature">
+      <img src="https://via.placeholder.com/400x250" alt="Brand" />
+      <div class="brand-info">
+        <h3>ASICS</h3>
+        <p>Fra løp til lifestyle – ASICS redefinerer komfort og design i 2025.</p>
+        <a href="#" class="cta-btn">Utforsk ASICS</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 BrandRadar – Oppdag trender før alle andre.</p>
+  </footer>
+</body>
+</html>
 
