--- a/news.html
+++ b/news.html
@@ -20,56 +20,62 @@
     </div>
   </header>
 
-  <!-- HERO: ukens kampanje -->
+  <!-- HERO -->
   <section class="news-hero">
-    <img src="https://via.placeholder.com/1200x400" alt="Ukens trend" />
+    <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?w=1600" alt="Høsttrender" />
     <div class="hero-content">
       <h1>🔥 Høsttrender 2025</h1>
-      <p>Utforsk de mest populære stilene akkurat nå – håndplukket av BrandRadar.</p>
-      <a href="#" class="cta-btn">Se tilbud</a>
+      <p>Fra streetwear til premium comfort — dette er stilene som dominerer høsten.</p>
+      <a href="#" class="cta-btn">Se tilbudene</a>
     </div>
   </section>
 
-  <!-- NYHETER / ARTIKLER -->
+  <!-- NYHETER -->
   <section class="news-grid">
     <h2>Siste nytt på radaren</h2>
     <div class="grid">
       <article class="news-card">
-        <img src="https://via.placeholder.com/400x250" alt="" />
-        <h3>3 sneakers som dominerer gatene i høst</h3>
-        <p>Klassikerne gjør comeback – se hvilke modeller som trender.</p>
+        <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600" alt="Sneakers" />
+        <h3>3 sneakers som definerer 2025</h3>
+        <p>Nike, Adidas og New Balance leder an – men en outsider overrasker!</p>
         <a href="#">Les mer</a>
       </article>
       <article class="news-card">
-        <img src="https://via.placeholder.com/400x250" alt="" />
-        <h3>Bærekraft møter mote</h3>
-        <p>Hvordan merker som Patagonia og Ganni setter standarden for 2025.</p>
+        <img src="https://images.unsplash.com/photo-1603808033192-082d6919d184?w=600" alt="Bærekraft" />
+        <h3>Bærekraft møter design</h3>
+        <p>Hvordan Patagonia og Ganni beviser at ansvarlig mote kan være trendsettende.</p>
         <a href="#">Les mer</a>
       </article>
       <article class="news-card">
-        <img src="https://via.placeholder.com/400x250" alt="" />
+        <img src="https://images.unsplash.com/photo-1600180758890-6b94519a8ba6?w=600" alt="Jakker" />
         <h3>Guide: Jakker til overgangssesongen</h3>
-        <p>5 anbefalinger før høsten setter inn – fra teknisk til trendy.</p>
+        <p>Fem lette alternativer som kombinerer stil, funksjon og komfort.</p>
+        <a href="#">Les mer</a>
+      </article>
+      <article class="news-card">
+        <img src="https://images.unsplash.com/photo-1614286311444-fb5c8a96b944?w=600" alt="Gatemote" />
+        <h3>Streetstyle fra Milano til Oslo</h3>
+        <p>Europeisk influenserstil gjør comeback — med fokus på sneakers og denim.</p>
         <a href="#">Les mer</a>
       </article>
     </div>
   </section>
 
-  <!-- UKENS DEALS -->
+  <!-- DEALS -->
   <section class="weekly-deals">
     <h2>Ukens Deals 💸</h2>
     <div class="deal-list">
       <div class="deal-item">
-        <h4>20% på Nike hos Zalando</h4>
+        <h4>🔥 25% på Nike hos Zalando</h4>
         <a href="#">Se tilbud</a>
       </div>
       <div class="deal-item">
-        <h4>Fri frakt på Boozt – kun i helgen!</h4>
+        <h4>Fri frakt + 15% ekstra hos Boozt</h4>
         <a href="#">Shop nå</a>
       </div>
       <div class="deal-item">
-        <h4>Sportamore – opptil 60% rabatt på løpesko</h4>
-        <a href="#">Se mer</a>
+        <h4>Outlet: Adidas opptil 60% rabatt</h4>
+        <a href="#">Utforsk</a>
       </div>
     </div>
   </section>
@@ -79,18 +85,23 @@
     <h2>Radar Picks 🔥</h2>
     <div class="product-grid">
       <div class="product-card">
-        <img src="https://via.placeholder.com/300x300" alt="Produkt" />
+        <img src="https://images.unsplash.com/photo-1606813902788-8d84f9488c12?w=600" alt="Air Max" />
         <h3>Nike Air Max 270</h3>
         <a href="#" class="buy-btn">Se produkt</a>
       </div>
       <div class="product-card">
-        <img src="https://via.placeholder.com/300x300" alt="Produkt" />
+        <img src="https://images.unsplash.com/photo-1606813902709-90b0a1f3af0b?w=600" alt="Asics" />
         <h3>Asics Gel-Kayano</h3>
         <a href="#" class="buy-btn">Se produkt</a>
       </div>
       <div class="product-card">
-        <img src="https://via.placeholder.com/300x300" alt="Produkt" />
+        <img src="https://images.unsplash.com/photo-1593032465174-8b0426e6265d?w=600" alt="Samba OG" />
         <h3>Adidas Samba OG</h3>
+        <a href="#" class="buy-btn">Se produkt</a>
+      </div>
+      <div class="product-card">
+        <img src="https://images.unsplash.com/photo-1632714933813-25f7dfcb7f1a?w=600" alt="New Balance 550" />
+        <h3>New Balance 550</h3>
         <a href="#" class="buy-btn">Se produkt</a>
       </div>
     </div>
@@ -100,15 +111,16 @@
   <section class="brand-spotlight">
     <h2>Ugens Brand 👕</h2>
     <div class="brand-feature">
-      <img src="https://via.placeholder.com/400x250" alt="Brand" />
+      <img src="https://images.unsplash.com/photo-1539185441755-769473a23570?w=800" alt="ASICS" />
       <div class="brand-info">
         <h3>ASICS</h3>
-        <p>Fra løp til lifestyle – ASICS redefinerer komfort og design i 2025.</p>
+        <p>Fra løp til lifestyle – ASICS viser hvorfor japansk presisjon og design har tatt over gatemoten i 2025.</p>
         <a href="#" class="cta-btn">Utforsk ASICS</a>
       </div>
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <p>© 2025 BrandRadar – Oppdag trender før alle andre.</p>
   </footer>
