--- a/news.html
+++ b/news.html
@@ -20,6 +20,19 @@
     </div>
   </header>
 
+  <!-- BRANDRADAR PARTNER BANNER -->
+<section class="partner-banner">
+  <div class="partner-inner">
+    <img src="https://images.unsplash.com/photo-1606813902788-8d84f9488c12?w=400" alt="Partner-logo" />
+    <div class="partner-text">
+      <h3>Ukens Partner 💎</h3>
+      <p><strong>Boozt</strong> – 15% ekstra rabatt på høstkolleksjonen! Kun frem til søndag.</p>
+      <a href="#" class="partner-btn">Shop kampanjen</a>
+    </div>
+  </div>
+</section>
+
+
   <!-- HERO -->
   <section class="news-hero">
     <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?w=1600" alt="Høsttrender" />
